# ai-toolkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.claude/: settings.json
.cursor/rules/: 00-always.mdc  scaffolder.mdc  tests.mdc  writing-rules.mdc
.github/workflows/: ci.yml
src/ai_cli/: constants.py  main.py  utils.py
src/ai_cli/commands/: clean.py  doctor.py  eval.py  inspect.py  list.py  new.py  run.py  templates.py  upgrade.py
src/ai_cli/generators/: agent_generator.py  rag_generator.py
src/ai_cli/runtime/: base_agent.py
src/ai_cli/templates/agent/: agent.py
tests/: test_cli_structure.py
