[project]
name = "ai-toolkit"
version = "0.1.0"
description = "Local-first AI CLI for building and managing agent and RAG projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pre-commit>=4.0",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

[project.scripts]
ai = "ai_cli.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long (ruff-format handles wrapping)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
root = ["./src"]

[tool.ty.src]
# `src/ai_cli/templates/` contains template files that are COPIED into
# generated projects, not executed by the scaffolder itself. They import
# packages (openai, etc.) that are dependencies of generated projects, not
# of ai-toolkit. Exclude from type-checking in this repo.
exclude = ["src/ai_cli/templates/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
